--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,5 @@
+
+
 <!doctype html>
 <html ng-app="FileSync">
   <head>
@@ -5,7 +7,10 @@
     <link rel="stylesheet" href="/components/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="/components/bootstrap/dist/css/bootstrap-theme.css"/>
     <link rel="stylesheet" href="/components/highlightjs/styles/github.css"/>
+    <link rel="stylesheet" href="/components/angular-smilies-master/dist/angular-smilies.min.css">
+    <link rel="stylesheet" href="/components/angular-smilies-master/dist/angular-smilies-embed.min.css">
     <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   </head>
 
   <body>
@@ -13,8 +18,43 @@
       <div ng-repeat="viewer in social.viewers" class="animate">
         {{ viewer }}
       </div>
+      <div id="messagesZone" class="wrap" style="overflow:auto;max-height:100px;">
+        <div ng-repeat="message in social.messages"  class="animate">
+          {{message.nickname }}: <span smilies="message.msg"></span>
+        </div>
+      </div>
+      <form id="formMsg" ng-submit="social.sendMessage()">
+        <div class="input-group">
+        <span class="input-group-addon ng-isolate-scope" smilies-title="Smilies" smilies-placement="left" smilies-selector="social.message">
+        <i class="smiley-smile smilies-selector" popover-title="Smilies" popover-placement="right" popover-template="smiliesTemplate" ng-init="smiliesTemplate = 'template/smilies/popover-a.html'"></i>
+        </span>
+        <input class="form-control ng-pristine ng-valid ng-touched" focus-on-change="social.message" id="tchatText" type="text"
+        ng-model="social.message"
+        name="name"
+        placeholder="Ecrit ton texte" />
+            </div>
+        </form>
+        </br>
+        <form id="uploadForm" enctype="multipart/form-data" action="/api/photo" method="post">
+        <input type="file" accept="image/png" name="singleInputFileName" />
+        <input type="submit" value="Upload Image" name="submit">
+        <div class="news">{{social.verifEmoteMsg}}</div>
+    <!--          <div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Emoticones
+    <span class="caret"></span></button>
+    <ul class="dropdown-menu">
+          <ul class="example-animate-container" >
+          <li ng-repeat="icone in social.arr" ng-click="social.choixEmote(icone)">
+              <img src="{{icone.img}}"/>
+          </li>
+          </ul>
+      </div>
+    </ul>
+  </div> -->
+    </form>
     </div>
     <div class="container" ng-controller="HistoryCtrl as history">
+
       <div class="history">
 
         <div class="row-fluid">
@@ -57,16 +97,24 @@
           </div>
         </div>
       </div><!-- / -->
-    </div><!-- /container -->
 
+    </div><!-- /container -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="/components/angular/angular.js" type="text/javascript"></script>
   <script src="/components/angular-animate/angular-animate.js" type="text/javascript"></script>
   <script src="/components/angular-highlightjs/angular-highlightjs.js" type="text/javascript"></script>
+  <script src="/components/angular-emoji/dist/emoji.min.js"></script>
+  <script src="/components/angular-strap/dist/angular-strap.min.js"></script>
+  <script src="/components/angular-strap/dist/angular-strap.tpl.min.js"></script>
+  <script src="/components/angular-smilies-master/dist/angular-smilies.min.js"></script>
 
   <script src="/components/highlightjs/highlight.pack.js" type="text/javascript"></script>
   <script src="/components/moment/moment.js" type="text/javascript"></script>
   <script src="/components/lodash/lodash.js" type="text/javascript"></script>
+  <script src="/components/jquery/dist/jquery.js" type="text/javascript"></script>
   <script src="/components/visibilityjs/lib/visibility.core.js" type="text/javascript"></script>
+  <script src="/components/angular-sanitize/angular-sanitize.js" type="text/javascript"></script>
   <script src="/socket.io/socket.io.js" type="text/javascript"></script>
   <script src="/app/app.js" type="text/javascript"></script>
   <script src="/app/HistoryCtrl.js" type="text/javascript"></script>
