modification indication index.html

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
             </div>
         </form>
         </br>
-        <p>Si vous voulez ajouter un emoticone veuillez respecter le format .png et la dimension 18*18 </p>
+        <p>Si vous voulez ajouter un emoticone veuillez respecter le format .png et une dimension inférieure ou égale à 50*50 </p>
         <form id="uploadForm" enctype="multipart/form-data" action="/api/photo" method="post">
         <input type="file" accept="image/png" name="singleInputFileName" />
         <input type="submit" value="Upload Image" name="submit">
