Modification readme_Emot et index + ajout commentaire server et social

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
             </div>
         </form>
         </br>
-        <p>Si vous voulez ajouter un émoticone veuillez respecter le format .png et une dimension inférieure ou égale à 30*30 </p>
+        <p>Si vous voulez ajouter une émoticône, veuillez respecter le format .png et une dimension inférieure ou égale à 30*30 </p>
         <form id="uploadForm" enctype="multipart/form-data" action="/" method="post">
         <input type="file" ng-click="showDetails = ! showDetails" accept="image/png" name="singleInputFileName" />
       </br>
